Windows Installer - different file hierarchy, top ProgramFiles folder is company name and then every extension is going to live in it's own folder. - WHE folder is not Core folder - Added util extension to query native machine - Launch condition x64 - License created using WordPad in order to output the simplified version of the .rtf which can be used by the msi installer

--- a/windowspkg/WindowsHostExtensionInstaller/Components.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Components.wxs
@@ -9,7 +9,7 @@
 				<Environment Id="WdnaPath" Name="PATH" Value="[WDNAFOLDER]" Part="last" Permanent="yes" Action="set" System="yes"/>
       </Component>
     </ComponentGroup>
-    <ComponentGroup Id="WHE" Directory="WHEFOLDER">
+    <ComponentGroup Id="CORE" Directory="COREFOLDER">
       <Component Guid="12621f61-666b-40f4-ac24-d02e4d5436ed">
 				<Environment Id="ExtensionPort" Name="STEADYBIT_EXTENSION_PORT" Value="8000" Part="last" Permanent="yes" Action="set" System="yes"/>
         <File Source="./Artifacts/windows_host_extension.exe" KeyPath="yes"/>
