--- a/windowspkg/WindowsHostExtensionInstaller/Folders.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Folders.wxs
@@ -1,9 +1,11 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
   <Fragment>
     <StandardDirectory Id="ProgramFiles6432Folder">
-			<Directory Id="ROOTFOLDER" Name="!(bind.Property.Manufacturer) !(bind.Property.ProductName)">
-				<Directory Id="WDNAFOLDER" Name="CLI"/>
-				<Directory Id="WHEFOLDER" Name="Extension"/>
+			<Directory Id="STEADYBITFOLDER" Name="!(bind.Property.Manufacturer)">
+				<Directory Id="EXTENSIONFOLDER" Name="!(bind.Property.ProductName)">
+					<Directory Id="WDNAFOLDER" Name="CLI"/>
+					<Directory Id="COREFOLDER" Name="Core"/>
+				</Directory>
 			</Directory>
     </StandardDirectory>
   </Fragment>
