--- a/windowspkg/WindowsHostExtensionInstaller/Components.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Components.wxs
@@ -6,12 +6,12 @@
         <File Source="./Artifacts/wdna_shutdown.exe" />
         <File Source="./Artifacts/WinDivert.dll" />
         <File Source="./Artifacts/WinDivert64.sys" />
-				<Environment Id="WdnaPath" Name="PATH" Value="[WDNAFOLDER]" Part="last" Permanent="yes" Action="set" System="yes"/>
+				<Environment Id="WdnaPath" Name="PATH" Value="[WDNAFOLDER]" Part="last" Permanent="no" Action="set" System="yes"/>
       </Component>
     </ComponentGroup>
     <ComponentGroup Id="CORE" Directory="COREFOLDER">
       <Component Guid="12621f61-666b-40f4-ac24-d02e4d5436ed">
-				<Environment Id="ExtensionPort" Name="STEADYBIT_EXTENSION_PORT" Value="8000" Part="last" Permanent="yes" Action="set" System="yes"/>
+				<Environment Id="ExtensionPort" Name="STEADYBIT_EXTENSION_PORT" Value="8085" Permanent="yes" Action="create" System="yes"/>
         <File Source="./Artifacts/extension-host-windows.exe" KeyPath="yes"/>
 				<ServiceInstall Id="ServiceInstall" Type="ownProcess" Name="SteadybitWindowsHostExtension" DisplayName="!(bind.Property.ProductName)" Start="auto" Vital="yes" ErrorControl="normal"/>
 				<ServiceControl Id="StartService" Name="SteadybitWindowsHostExtension" Start="install" Stop="both" Remove="uninstall" Wait="yes"/>
