fix: running the installer after it is installed - when propted to uninstall it would show that architecture is incorrect. Query native machine only executes on the initial installation and not on uninstall. Condition is expanded to cover that case.

--- a/windowspkg/WindowsHostExtensionInstaller/Package.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Package.wxs
@@ -20,6 +20,6 @@
 		<Property Id="ARPPRODUCTICON" Value="icon"/>
 
 		<util:QueryNativeMachine/>
-		<Launch Condition="WIX_NATIVE_MACHINE = 34404" Message="x64 is the only supported architecture. Current architecture is [WIX_NATIVE_MACHINE]."/>
+		<Launch Condition="Installed OR WIX_NATIVE_MACHINE = 34404" Message="x64 is the only supported architecture. Current architecture is [WIX_NATIVE_MACHINE]."/>
   </Package>
 </Wix>
