--- a/windowspkg/WindowsHostExtensionInstaller/Package.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Package.wxs
@@ -9,6 +9,7 @@
     <Feature Id="Main">
       <ComponentGroupRef Id="WDNA" />
       <ComponentGroupRef Id="CORE" />
+      <ComponentGroupRef Id="LICENSES" />
     </Feature>
 
 		<UI Id="UI">
