--- a/windowspkg/WindowsHostExtensionInstaller/Folders.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Folders.wxs
@@ -5,6 +5,7 @@
 				<Directory Id="EXTENSIONFOLDER" Name="!(bind.Property.ProductName)">
 					<Directory Id="WDNAFOLDER" Name="CLI"/>
 					<Directory Id="CPUFOLDER" Name="CPU"/>
+					<Directory Id="MEMFOLDER" Name="Memory"/>
 					<Directory Id="COREFOLDER" Name="Core"/>
 					<Directory Id="LICENSESFOLDER" Name="Licenses"/>
 				</Directory>
