saving: fill disk - at once implemented - working on devzero emulation & dd implementation

--- a/windowspkg/WindowsHostExtensionInstaller/Folders.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Folders.wxs
@@ -6,6 +6,7 @@
 					<Directory Id="WDNAFOLDER" Name="CLI"/>
 					<Directory Id="CPUFOLDER" Name="CPU"/>
 					<Directory Id="MEMFOLDER" Name="Memory"/>
+					<Directory Id="DISKFOLDER" Name="Disk" />
 					<Directory Id="COREFOLDER" Name="Core"/>
 					<Directory Id="LICENSESFOLDER" Name="Licenses"/>
 				</Directory>
