--- a/windowspkg/WindowsHostExtensionInstaller/Package.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Package.wxs
@@ -11,6 +11,7 @@
       <ComponentGroupRef Id="LICENSES" />
       <ComponentGroupRef Id="CPUSTRESS" />
       <ComponentGroupRef Id="MEMORY" />
+      <ComponentGroupRef Id="DISK" />
       <ComponentGroupRef Id="CORE" />
     </Feature>
 
