feat: disk fill with fsutil & dd - added devzero utility that emulates Linux /dev/zero

--- a/windowspkg/WindowsHostExtensionInstaller/Components.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Components.wxs
@@ -16,7 +16,7 @@
 			</Component>
 		</ComponentGroup>
 		<ComponentGroup Id="DISK" Directory="DISKFOLDER">
-			<Component Guid="">
+			<Component Guid="8fc3188e-cf9f-4acb-b58a-ad34d56835f7">
 				<File Source="./Artifacts/devzero.exe"/>
 				<Environment Id="DiskFolderPath" Name="PATH" Value="[DISKFOLDER]" Part="last" Permanent="no" Action="set" System="yes"/>
 			</Component>
