--- a/windowspkg/WindowsHostExtensionInstaller/Package.wxs
+++ b/windowspkg/WindowsHostExtensionInstaller/Package.wxs
@@ -3,8 +3,8 @@
 		 xmlns:util="http://wixtoolset.org/schemas/v4/wxs/util"
 		 >
   <Package Name="Steadybit Windows Host Extension" Manufacturer="Steadybit GmbH" Version="1.0.0.0" UpgradeCode="3e616adc-d783-486a-83ff-333d45c856f6">
-    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." AllowSameVersionUpgrades="no"/>
-		<Media Id="1" EmbedCab="yes" Cabinet="cab1"/>
+    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed. Please uninstall it and install the new version." AllowSameVersionUpgrades="yes"/>
+	<Media Id="1" EmbedCab="yes" Cabinet="cab1"/>
 
     <Feature Id="Main">
       <ComponentGroupRef Id="WDNA" />
